# moviad

./: .gitignore  .gitmodules  README.md  main.py  pyproject.toml  requirements.txt
main_scripts/: main_compression.py  main_dinomaly.py  main_fastflow.py  main_patchcore.py  main_rd4ad.py  main_stfpm.py  run_profiler.sh
main_scripts/main_scripts_space/: main_fastflow.py  main_patchcore.py  main_stfpm.py
moviad/datasets/: ad_datasets.py  builder.py  iad_dataset.py  space_datasets.py
moviad/datasets/miic/: miic_dataset.py
moviad/datasets/mvtec/: mvtec_dataset.py
moviad/datasets/visa/: visa_dataset.py
moviad/entrypoints/: cfa.py  padim.py  patchcore.py  rd4ad.py  stfpm.py
moviad/models/: __init__.py
moviad/models/components/rd4ad/: deresnet.py  resnet.py
moviad/models/fastflow/: fastflow.py
moviad/models/padim/: padim.py
moviad/models/patchcore/: autoencoder.py  feature_compressor.py  features_dataset.py  kcenter_greedy.py  patchcore.py  patchcore_inference_profiler.py  product_quantizer.py
moviad/models/rd4ad/: rd4ad.py
moviad/models/stfpm/: stfpm.py  stfpm_inference_profiler.py
moviad/trainers/: __init__.py  trainer.py  trainer_cfa.py  trainer_fastflow.py  trainer_padim.py  trainer_patchcore.py  trainer_rd4ad.py  trainer_stfpm.py
moviad/utilities/: evaluator.py  get_sizes.py  metrics.py
tests/: config.json
tests/datasets/: miicdataset_test.py
tests/main/: patchcore_test.py  rd4ad_tests.py
