[project]
name = "moviad"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "calflops>=0.3.2",
    "einops>=0.8.2",
    "faiss-cpu>=1.13.2",
    "matplotlib>=3.10.8",
    "micromind>=0.2.1",
    "numpy>=2.4.3",
    "opencv-python>=4.13.0.92",
    "pandas>=3.0.1",
    "pillow>=12.1.1",
    "scikit-image>=0.26.0",
    "scikit-learn>=1.8.0",
    "timm>=1.0.25",
    "tqdm>=4.67.3",
    "transformers>=5.3.0",
    "wandb>=0.25.1",
    "torch>=2.10.0",
    "torchaudio>=2.10.0",
    "torchvision>=0.25.0",
    "ptflops>=0.7.5",
    "tabulate>=0.10.0",
    "ipykernel>=7.2.0",
]


# Define the PyTorch index for CUDA 12.4
[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

# Force torch packages to use the custom index
[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }
torchaudio = { index = "pytorch-cu128" }
